# ThreeBodyChat

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  run_all.sh
notebooks/: godzilla.md  response_godzilla.pkl
prompts/: prompt_maid.py  prompt_master.py  prompt_orchestrator.py
tests/: redis_test.py  test_Maid.py  test_Master.py  test_basebot.py  test_orchestrator.py  test_redis_queue.py
threebodychat/: BaseBot copy.py  BaseBot.py  Maid.py  Master.py  Orchestrator.py  config.py
utils/: langfuse_client.py  llm_factory.py  log_utils.py  memory_factory.py
