[tool.poetry]
name = "threebodychat"
version = "0.1.0"
description = ""
authors = ["nahrun1682 <kawamura100995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.86.0"
langchain = "^0.3.25"
dotenv = "^0.9.9"
discord = "^2.3.2"
redis = "^6.2.0"
langchain-community = "^0.3.26"
langchain-openai = "^0.3.27"
langchain-core = "^0.3.66"
langfuse = "^3.0.8"
pynacl = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
